<resources>

    <string name="app_name">MyShip</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="log_in">Đăng Nhập</string>
    <string name="Email">Email</string>
    <string name="password">Mật Khẩu</string>
    <string name="forgot_pass">Quên Mật Khẩu</string>
    <string name="loginwith">Đăng nhập bằng tài khoản khác </string>
    <string name="tentaikhoan">Tên tài khoản</string>
    <string name="phone">Số điện thoại</string>
    <string name="email_xac_nhan">Email xác nhận</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="nhap_lai_mk">Nhập lại mật khẩu</string>
    <string name="facebook_app_id">2368761886718547</string>
    <string name="fb_login_protocol_scheme">fb2368761886718547</string>
    <string name="hint_verify_code">Mã xác nhận</string>
    <string name="verify">Xác nhận</string>
    <string name="sent_code">Đã gửi mã xác minh đến số điện thoại của bạn</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_item_search">Tìm kiếm</string>
    <string name="menu_item_about_app">Về Ứng Dụng</string>
    <string name="menu_item_help">Giúp Đỡ</string>
    <string name="menu_item_version_app">Phiên bản %s</string>
</resources>
