<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">
    <ImageView
        android:src="@drawable/logo4"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:text="Xác thực tài khoản"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sent_code"
        android:textStyle="italic"
        android:textSize="16dp"/>
    <EditText
        android:id="@+id/edDialogVerifyCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/hint_verify_code"
        android:inputType="numberDecimal"
        android:layout_margin="10dp"/>

    <Button
        android:onClick="onClickedButtonDialog"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/selector_button"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="18dp" />


</LinearLayout>