<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll"
            android:gravity="center">

            <ImageView
                android:src="@drawable/logo4"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="#333333"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edForgotUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/tentaikhoan"
                android:paddingLeft="10dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/edForgotPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"

                android:hint="@string/phone"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button"
                android:onClick="ocClickXacNhan"
                android:text="@string/xac_nhan"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="20dp" />


        </LinearLayout>


    </RelativeLayout>
</ScrollView>